# fused-effects-optics

./: CHANGELOG.md  LICENSE  README.md  fused-effects-optics.cabal  hie.yaml
.github/workflows/: ci.yml  haskell.yml
src/: FusedEffectsOptics.hs
src/Control/Effect/: Optics.hs
src/Control/Effect/Optics/: Indexed.hs
